Extract Money parsing to utility class